# playground

./: README.md
cmake/simple_example/: CMakeLists.txt
cmake/simple_example/include/: helloWorldExecutable.h
cmake/two_projects_exe_uses_lib_which_is_NOT_installed_using_top_level_cmake/: CMakeLists.txt
cmake/two_projects_exe_uses_lib_which_is_NOT_installed_using_top_level_cmake/executable/: CMakeLists.txt
cmake/two_projects_exe_uses_lib_which_is_NOT_installed_using_top_level_cmake/executable/src/: helloWorldExecutable.cpp
cmake/two_projects_exe_uses_lib_which_is_installed/executable/: CMakeLists.txt
git/: README.md
git/bisect/: BUILD  WORKSPACE  bisect.h  test.cpp  test_script.sh
grpc/: WORKSPACE
grpc/proto/: BUILD
kotlin/: settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/: KotlinApp.kt
spring/blog/: build.gradle.kts
valgrind/: .bazelrc  BUILD  cachegrind_array.cpp  cachegrind_list.cpp  callgrind.out.53677  callgrind_main.cpp  memcheck_main.cpp
